fixed header spacing

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -54,8 +54,11 @@ a {
   text-decoration: none;
 }
 
-nav ul li {
-  padding-left: 2%;
+.nav-text {
+  font-size: 16px;
+}
+
+.navbar-nav ul li {
   padding-right: 2%;
 }
 
